syntax = "proto3";

option go_package = "pb/api";

message StatusResponse {
  string code = 1;
  string message = 2;
}